[package]
name = "Json2Csv"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0.228"
serde_json = { version = "1.0.149", features = ["preserve_order"] }
# csv = "1.4.0"
eframe = "0.33.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
thiserror = "2.0.18"
anyhow = "1.0.100"
indexmap = "2.13.0"
